[tool.poetry]
name = "radiozilla"
version = "0.1.0"
description = "Python Radio Browser API wrapper with fully Type Hinting and Documentation"
authors = ["mmlvgx <mmlvgx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "radiozilla", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
